# dashboard

./: .gitignore  Cargo.toml
.github/workflows/: build.yml  pr_check.yml
backend/: Cargo.toml  config.yaml
backend/src/: api.rs  config.rs  database.rs  main.rs
backend/src/widget/: mod.rs  weather.rs
common/: Cargo.toml
common/src/: backend.rs  lib.rs
frontend/: Cargo.toml  README.md  Trunk.toml  index.html
frontend/src/: app.rs  main.rs
src/: api.rs  config.rs  database.rs  main.rs
src/widget/: mod.rs  weather.rs
