[workspace]


members = [
    "backend",
    "common",
    "frontend",
]
# default-members = ["backend"]
resolver = "2"

[workspace.dependencies]
common = {path = "./common", version = "0.1.0"}

serde = {version="1.0.193" }

serde_json = "1.0.107"

chrono = {version = "0.4.31", features = ["serde"]}