[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { workspace = true }

anyhow = "1.0"


axum = { version = "0.8", features = ["macros"]}
tokio = { version = "1.48", features = ["full"] }
tower = { version = "0.5", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.6", features = [
    # "add-extension",
    # "auth",
    # "compression-full",
    # "limit",
    "fs",
    "trace",
] }
tower-layer = "0.3.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

chrono = {workspace = true}
serde = {workspace = true , features = ["derive"] }
serde_json = {workspace = true}
serde_yaml = "0.9.34"
