[package]
name = "trunk-template"
version = "0.1.0"
edition = "2021"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
common = {path = "../common", version = "0.1.0"}

console_error_panic_hook = "0.1.7"
gloo-net = "0.4.0"
log = "0.4.20"
wasm-bindgen-futures = "0.4.38"
wasm-logger = "0.2.0"
yew = { version="0.20", features=["csr"] }
yew-router = "0.17.0"

serde_json = "1.0.107"