[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
common = { workspace = true }

console_error_panic_hook = "0.1.7"
gloo-net = "0.5.0"
log = "0.4.22"
wasm-bindgen-futures = "0.4.42"
wasm-logger = "0.2.0"
yew = { version="0.21.0", features=["csr"] }
yew-router = "0.18.0"

serde_json = {workspace = true}